# boto3-stubs-reducer

./: .gitignore  LICENSE  README.md  requirements-dev.txt  setup.cfg
src/boto3_stubs_reducer/: __main__.py  reducer.py
