[metadata]
name = boto3-stubs-reducer
version = 0.0.1
description = Reduce invalid modules from boto3-stubs stub files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/smatsumt/boto3-stubs-reducer
author = Shinji Matsumoto
author_email = shinji.mtsmt@gmail.com

[options]
package_dir=
    =src
packages=boto3_stubs_reducer
install_requires =
    astunparse==1.6.3
include_package_data = True

[options.entry_points]
console_scripts =
    boto3-stubs-reducer=boto3_stubs_reducer.reducer:main
